# Classwork-PythonDLApplicationDevelopment

./: .gitignore  README.md  pyproject.toml
lesson01/: 00.安裝測試基本套件.ipynb  01.perceptron.ipynb  03.MP.ipynb
lesson02/: 04.MLP_clf.ipynb  05.activationFunction.ipynb  09.手寫阿拉伯數字辨識.ipynb  13.學習速率排程.ipynb  model.h5
lesson03/: 01.opencv_demo.ipynb  02.opencv_demo2.ipynb  03.convolutions.ipynb
lesson04/: 06.Callback.ipynb  07.Keras_applications_predict.ipynb  08.遷移學習01.ipynb  11.yolo8_Detection01.ipynb  model_A.h5  手寫阿拉伯數字辨識_CNN.ipynb
lesson05/: 01_中文分詞.ipynb  03_爬蟲測試.ipynb  04.text-processing-pipeline-classification-models.ipynb  04_自然語言前置處理.ipynb  06_TFIDF.ipynb  08_spacy_word2vec.ipynb  12.yolov8_webcam.ipynb  myText.txt  onehot_encoding.ipynb  spaCy_test01.ipynb  stopwords.txt
lesson06/: 01_RNN_test01.ipynb  01_RNN_test02.ipynb  03_LSTM_Train.ipynb  04_LSTM_test.ipynb  w2v_visualization.ipynb
lesson07/: 01_Imdb_loadData.ipynb  02_LSTM_IMDB_Text.ipynb  07_GRU_test.ipynb  07_GRU_test.py
lesson08/: 01_attention_test.ipynb  02_text_classification_with_transformer.ipynb  02_text_classification_with_transformer_更新.ipynb  03_BERT_情緒分析_更新.ipynb  04_BERT_問題回答.ipynb  06_GPT2_文字生成.ipynb  11_CKIP_Transformers.ipynb  GPT2_中文生成.ipynb
lesson09/: 01_擴散式生成.ipynb  01_音檔解析.ipynb  02_VAE.ipynb  03_DCGAN_MNIST.ipynb  07_stable-diffusion_colab_更新.ipynb
lesson10/: 01-Chatbox01.ipynb  02_Whisper_youtube02.ipynb  02_聲音錄製.ipynb  03_python_speech_features.ipynb  04_短指令辨識.ipynb
lesson11/: 01_Fibonacci_Calculation.ipynb  02_Policy_Evaluation_2D.ipynb  05.dlib01.ipynb  05_Face_Eye_Detection.ipynb  OpenCV-HAARCascadeClassifiers01.ipynb  gym02.py
