[tool.poetry]
name = "classwork-pythondlapplicationdevelopment"
version = "0.1.0"
description = ""
authors = ["chesterXalan <mastenfor26@gmail.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "<2.0.0"
tensorflow = { extras = ["and-cuda"], version = "2.18.0" }
torch = {version = "2.1.2", source = "pytorch"}
torchvision = {version = "0.16.2", source = "pytorch"}
torchaudio = {version = "2.1.2", source = "pytorch"}
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scikit-image = "^0"
opencv-python = "^4.10.0.84"
ultralytics = "^8.3.38"
jieba = "^0"
nltk = "^3.9.1"
wordcloud = "^1.9.4"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
# spacy = "^3.8.2"
# gensim = "^4.3.3"
transformers = "^4.46.3"
tf-keras = "^2.18.0"
ckip-transformers = "^0.3.4"
diffusers = "^0.31.0"
scipy = "^1.14.1"
librosa = "^0.10.2.post1"
speechrecognition = "^3.11.0"
pyaudio = "^0.2.14"
pytube2 = "^15.0.11"
python-speech-features = "^0.6"

[tool.poetry.group.jupyter.dependencies]
notebook = "^7.2.2"
ipywidgets = "^8.1.5"

[tool.poetry.group.type.dependencies]
types-tensorflow = "^2.18.0.20241112"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
